--- a/Text_Project/Src/edit.html
+++ b/Text_Project/Src/edit.html
@@ -106,13 +106,7 @@
                   <span>Text Style</span>
                 </div>
                 <div class="func-edit-1">
-                  <input
-                    type="range"
-                    min="0"
-                    max="100"
-                    value="50"
-                    class="range-styled"
-                  />
+                  <input type="range" min="1" max="100" value="50" />
                   <input type="color" />
                   <select class="select-er">
                     <option>Arial</option>
