--- a/Text_Project/Src/edit.html
+++ b/Text_Project/Src/edit.html
@@ -54,9 +54,7 @@
           <div class="templetes">
             <!--Contains sample templetes-->
             <!--Contains animation linear scroll-->
-            <button class="btn common-btn" id="t1" onclick="t1btn_change()">
-              I love You
-            </button>
+            <button class="btn common-btn" id="t1">I love You</button>
             <button class="btn common-btn" id="t2">I love You</button>
             <button class="btn common-btn" id="t3">I love You</button>
             <button class="btn common-btn" id="t4">I love You</button>
