--- a/Text_Project/Src/index.html
+++ b/Text_Project/Src/index.html
@@ -28,7 +28,9 @@
             <a href="index.html">
                 <button>Home</button>
               </a>
-          <button>About Us</button>
+              <a href="About_Us_new.html">
+                <button>About Us</button>
+              </a>
           <button>Folder</button>
           <button>Contact</button>
         </div>
