--- a/Text_Project/Test/test1.html
+++ b/Text_Project/Test/test1.html
@@ -16,5 +16,8 @@
         <p>Even more content...</p>
       </div>
     </div>
+    <marquee behavior="scroll" direction="left" scrollamount="5"
+      >This is a scrolling text using marquee.</marquee
+    >
   </body>
 </html>
